# pyright-playground

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  rollup.config.js
backend/: .flake8  .gitignore  README.md  app.py  pyproject.toml
backend/backend/: app.py  better_middleware.py  download_code.py  download_code_handler.py  generate_download_link.py  github.py  run_pyright.py  simple_error.py
backend/lang-server/: index.js  package-lock.json  package.json
frontend/: .gitignore  .prettierrc  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.svelte  global.d.ts  main.ts  pyrightTypes.ts
frontend/src/editor/: CodeMirror.svelte  horizontal-offset.ts  index.ts  squiggly-lines.ts  tooltip.ts
public/: index.html
src/: App.svelte
